# hack

./: .db65.db  .db65_history  Cargo.toml  README.md  add.asm  build.ps1  hw.jack
animal/: Animal.jack  Animal.vm  Main.jack  Main.vm
assembler/: Cargo.toml
assembler/src/: asm.pest  assembler.rs  constants.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/src/pdb/: database.rs  setup.rs
compcore/: Cargo.toml
compcore/src/: lib.rs
compcore/src/assembler/: asm.pest  assemble.rs  assembler.rs
compcore/src/jcomp/: compiler.rs  expression.rs  symbols.rs
compcore/src/linker/: link.rs  linker.rs
compcore/src/vcomp/: vm.pest  vmcomp.rs
hcomp/: Cargo.toml
hcomp/src/: main.rs
hello_world/: Main.jack  Main.vm  hello_world.asm
jcomp/: Cargo.toml
jcomp/src/: compiler.rs  expression.rs  jack.pest  main.rs  symbols.rs
linker/: Cargo.toml
linker/src/: linker.rs  main.rs
mytest/: Sys.vm  Test.vm  mytest.asm
src/: asm.pest  assembler.rs  compiler.rs  constants.rs  jack.pest  main.rs  vm.pest  vmcomp.rs
src/jack/: compiler.rs  symbols.rs
vcomp/: Cargo.toml
vcomp/src/: constants.rs  main.rs  vmcomp.rs
