[package]
name = "hcomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common ={path = "../common"}
compcore ={path = "../compcore"}
anyhow ={workspace=true}
clap  ={workspace=true}
clap_derive ={workspace=true}
pest ={workspace=true}
pest_derive ={workspace=true}

